fixed mobile responsiveness issue, removed column-gap from mobile screens.

--- a/src/styles/components/Footer.scss
+++ b/src/styles/components/Footer.scss
@@ -10,6 +10,7 @@
     grid-column: 1 / span 12;
     grid-template-columns: repeat(12, 1fr);
     padding: 3.2rem 2.4rem;
+    grid-column-gap: 0;
   }
 
   &__note {
@@ -27,6 +28,7 @@
     }
     @media (max-width: 960px) {
       order: 2;
+      grid-column: span 4;
     }
 
     .footer__label {
@@ -57,12 +59,15 @@
   }
 
   &__brand {
-    position: relative; // needed for absolute positioning of pseudo-elements
+    position: relative;
     display: flex;
     align-items: flex-start;
 
     @media (max-width: 768px) {
       grid-column: 1 / span 12;
+    }
+    @media (max-width: 960px) {
+      grid-column: span 4;
     }
 
     img {
@@ -135,6 +140,9 @@
       grid-column: 1 / span 12;
       margin: 6.4rem 0;
       order: 1;
+    }
+    @media (max-width: 960px) {
+      grid-column: span 4;
     }
 
     .footer__label {
@@ -214,26 +222,23 @@
   }
 
   @media (max-width: 768px) {
-    grid-template-columns: 1fr;
-    text-align: center;
 
     &__brand,
-    &__nav,
-    &__note,
-    &__contact {
-      grid-column: span 12;
+    &__note
+    {
+      grid-column: 1 / span 12;
     }
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 960px) {
   .hidden-xs {
     display: none !important;
   }
 }
-@media (max-width: 767px) {
+@media (max-width: 960px) {
   .footer__brand::before,
   .footer__brand::after {
     display: none;
-    content: none; /* or opacity: 0; */
+    content: none;
   }
 }
